# stt-demo

./: .gitignore  README.md
client/mobile/: PRD.md  Planning.md  QUICKSTART.md  app.json
client/mobile/STTMobileApp/: .gitignore  App.tsx  CURRENT_STATUS.md  ERROR_FIX_SUMMARY.md  IOS_BUILD_GUIDE.md  IOS_TEST_CHECKLIST.md  NATIVE_MODULE_FIX.md  PLATFORM_ERROR_FIX.md  QUICK_START_iOS.md  README.md  SUCCESS_SUMMARY.md  app.json  package-lock.json  package.json
client/mobile/STTMobileApp/docs/: AUDIO_DEVICE_GUIDE.md  AUDIO_STREAMING_GUIDE.md  CHANGELOG.md  COMPLETION_REPORT.md  DEVELOPMENT.md  DEVICE_TESTING.md  EXPO_GO_GUIDE.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART_STREAMING.md  SETUP.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
client/mobile/STTMobileApp/ios/: Podfile
client/mobile/STTMobileApp/ios/STTMobileApp/: Info.plist
client/mobile/STTMobileApp/ios/STTMobileApp.xcodeproj/: project.pbxproj
client/mobile/STTMobileApp/ios/STTMobileApp.xcworkspace/: contents.xcworkspacedata
client/mobile/STTMobileApp/src/hooks/: useRealTimeSTT.ts
client/mobile/STTMobileApp/src/services/: AudioService.ts  README.md  WebSocketService.ts
client/web/: .env.local.example  README.md  package-lock.json  package.json
client/web/app/: layout.tsx  page.tsx
client/web/components/: AudioRecorder.tsx  LatencyStats.tsx  StatusIndicator.tsx  TranscriptView.tsx
server/: .env.example  README.md  config.py  endpoints.py  main.py  pyproject.toml  stt_service.py  translation_service.py
server/reference/: streaming_test.py
(+11 files in other folders)
